--- a/install
+++ b/install
@@ -17,6 +17,8 @@ CONFIGURATIONS=(
 	.config/i3
 	.config/polybar
 	.config/powerline
+	.config/gtk-2.0
+	.config/gtk-3.0
 	.xinitrc
 	.Xresources
 )
