--- a/install
+++ b/install
@@ -8,6 +8,7 @@ CONFIGURATIONS=(
 	pictures/city.jpg
 	.bashrc
 	.bash_profile
+	bin/spotify-status
 	bin/docker-status
 	bin/start-polybar
 	bin/startup.sh
