--- a/install
+++ b/install
@@ -5,7 +5,7 @@
 
 # Files to work with
 CONFIGURATIONS=(
-	pictures/no-signal.jpg
+	pictures/background.jpg
 	.bashrc
 	.bash_profile
 	bin/player-status
